--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-      <td><img src="IMAGES/navi.jPEG" alt="NAVDEEP PROFILE PICTURE" width="200" height="300"> </td>
+      <td><img src="IMAGES/navi.JPEG" alt="NAVDEEP PROFILE PICTURE" width="200" height="300"> </td>
        <td><h1>Navdeep kaur</h1>
          <p><em>Founder and CTO of <strong><a href="https://www.udemy.com/">The udmey app</a></strong></em></p>
          <p> I am computer science engineer and working wirh CIBC as a customer service</p></td>
